--- a/UserSide/WebApp/style/style.css
+++ b/UserSide/WebApp/style/style.css
@@ -17,17 +17,10 @@
 .submit_btn{
   margin-left: 89%;
 }
-
-/*.btn-circle.btn-xl {
-  width: 150px;
-  height: 150px;
-  padding: 10px 16px;
-  font-size: 18px;
-  line-height: 1.33;
-  border-radius: 100px;
-  background: red;
-  color: white;
-}*/
+.submit_review{
+  margin-bottom: 2%;
+  margin-left: 44%;
+}
 
 .btn-circle {
   width: 144px;
